<resources>
    <string name="app_name">vhr</string>
    <string name="add_button">add Button</string>
    <string name="profile_1">Profile 1</string>
    <string name="birthdate">Birthdate</string>
    <string name="blood_type">Blood Type</string>
    <string name="allergies">Allergies</string>
    <string name="medical_history">Medical History</string>
    <string name="alain">Alain</string>
    <string name="profile_2" />
    <string name="_25_02_1989">25/02/1989</string>
    <string name="a">A+</string>
    <string name="shrimps_scallops">Shrimps, scallops</string>
    <string name="low_iron_and_knee_op_in_98">Low iron and knee op in 98</string>
    <string name="allergy">Allergies</string>
    <string name="medical_history_popup">Medical History</string>
    <string name="allergies_popup" />
    <string name="save">Save</string>
    <string name="blood_type_popup">Blood Type</string>
    <string name="birthdate_popup">Birthdate</string>
    <string name="name_popup">Name</string>
    <string name="add_image_button">add Image Button</string>
    <string name="name">Name</string>
    <string name="captured_image">Image capturée</string>
    <string name="avatar">Avatar</string>
</resources>