<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:padding="16dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <ImageView
        android:id="@+id/profilePicture"
        android:layout_width="96dp"
        android:layout_height="match_parent"
        app:srcCompat="@drawable/minimalist_avatar___illustration"
        android:contentDescription="@string/profile_1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/profilePicture1"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/birthdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/birthdate" />

            <TextView
                android:id="@+id/bloodType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blood_type" />

            <TextView
                android:id="@+id/allergies"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/allergies" />

            <TextView
                android:id="@+id/medicalHistory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/medical_history" />
        </LinearLayout>



    </LinearLayout>
    </androidx.cardview.widget.CardView>
</FrameLayout>
